cmake_minimum_required(VERSION 3.13)
project(flows)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -gdwarf-3")

add_executable(flows
        #main.cpp
        #A.cpp
        #B.cpp
        #D.cpp
        #F.cpp
        #C.cpp
        #I.cpp
        #J.cpp
        #JTest.cpp
        G.cpp
        )